Made a script creating folds
With a bunch of parameters like pct of val. fold, feature, target, etc

--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1817, 5)\n"
+      "(33126, 8)\n"
      ]
     },
     {
@@ -46,52 +46,70 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>image_id</th>\n",
-       "      <th>healthy</th>\n",
-       "      <th>multiple_diseases</th>\n",
-       "      <th>rust</th>\n",
-       "      <th>scab</th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age_approx</th>\n",
+       "      <th>anatom_site_general_challenge</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>benign_malignant</th>\n",
+       "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>Train_0</td>\n",
+       "      <td>ISIC_2637011</td>\n",
+       "      <td>IP_7279968</td>\n",
+       "      <td>male</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>head/neck</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>Train_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>ISIC_0015719</td>\n",
+       "      <td>IP_3075186</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>upper extremity</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>Train_2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>ISIC_0052212</td>\n",
+       "      <td>IP_2842074</td>\n",
+       "      <td>female</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "      <td>nevus</td>\n",
+       "      <td>benign</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>Train_3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>ISIC_0068279</td>\n",
+       "      <td>IP_6890425</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>head/neck</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>Train_4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>ISIC_0074268</td>\n",
+       "      <td>IP_8723313</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>upper extremity</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>benign</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -99,15 +117,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  image_id  healthy  multiple_diseases  rust  scab\n",
-       "0  Train_0        0                  0     0     1\n",
-       "1  Train_1        0                  1     0     0\n",
-       "2  Train_2        1                  0     0     0\n",
-       "3  Train_3        0                  0     1     0\n",
-       "4  Train_4        1                  0     0     0"
+       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge  \\\n",
+       "0  ISIC_2637011  IP_7279968    male        45.0                     head/neck   \n",
+       "1  ISIC_0015719  IP_3075186  female        45.0               upper extremity   \n",
+       "2  ISIC_0052212  IP_2842074  female        50.0               lower extremity   \n",
+       "3  ISIC_0068279  IP_6890425  female        45.0                     head/neck   \n",
+       "4  ISIC_0074268  IP_8723313  female        55.0               upper extremity   \n",
+       "\n",
+       "  diagnosis benign_malignant  target  \n",
+       "0   unknown           benign       0  \n",
+       "1   unknown           benign       0  \n",
+       "2     nevus           benign       0  \n",
+       "3   unknown           benign       0  \n",
+       "4   unknown           benign       0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +141,134 @@
     "train = pd.read_csv('../input/train.csv')\n",
     "print(train.shape)\n",
     "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "benign_malignant  target\n",
+       "benign            0         32542\n",
+       "malignant         1           584\n",
+       "Name: target, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.groupby('benign_malignant')['target'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10982, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age_approx</th>\n",
+       "      <th>anatom_site_general_challenge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>ISIC_0052060</td>\n",
+       "      <td>IP_3579794</td>\n",
+       "      <td>male</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>ISIC_0052349</td>\n",
+       "      <td>IP_7782715</td>\n",
+       "      <td>male</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>ISIC_0058510</td>\n",
+       "      <td>IP_7960270</td>\n",
+       "      <td>female</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>torso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>ISIC_0073313</td>\n",
+       "      <td>IP_6375035</td>\n",
+       "      <td>female</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>torso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>ISIC_0073502</td>\n",
+       "      <td>IP_0589375</td>\n",
+       "      <td>female</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>lower extremity</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge\n",
+       "0  ISIC_0052060  IP_3579794    male        70.0                           NaN\n",
+       "1  ISIC_0052349  IP_7782715    male        40.0               lower extremity\n",
+       "2  ISIC_0058510  IP_7960270  female        55.0                         torso\n",
+       "3  ISIC_0073313  IP_6375035  female        50.0                         torso\n",
+       "4  ISIC_0073502  IP_0589375  female        45.0               lower extremity"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = pd.read_csv('../input/test.csv')\n",
+    "print(test.shape)\n",
+    "test.head()"
    ]
   },
   {
