--- a/src/Experiments.ipynb
+++ b/src/Experiments.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,56 +280,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FEATURES = 'image_id'"
+    "FEATURES = 'image_name'\n",
+    "TARGET = 'target'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../input/train.csv')\n",
     "df['kfold'] = np.nan\n",
-    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "# df = df.sample(frac=1).reset_index(drop=True)\n",
     "\n",
     "X = df[FEATURES].values\n",
-    "y = df.iloc[:, 2] + df.iloc[:, 3] * 2 + df.iloc[:, 4] * 3"
+    "y = df[TARGET].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y.value_counts()"
+    "valid=10\n",
+    "skf = StratifiedKFold(n_splits=int(100/valid), random_state=42)\n",
+    "\n",
+    "for fold, (train, valid) in enumerate(skf.split(X, y)):\n",
+    "    if fold == 0:\n",
+    "        df.loc[valid, 'kfold'] = -1\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "df_valid = df[df['kfold'] == -1].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of samples per class:\n",
+      " 1.0    5963\n",
+      " 0.0    5963\n",
+      " 3.0    5962\n",
+      " 4.0    5962\n",
+      " 2.0    5962\n",
+      "-1.0    3314\n",
+      "Name: kfold, dtype: int64\n",
+      "\n",
+      "Class \"-1\" is for validation\n"
+     ]
+    }
+   ],
    "source": [
+    "df_train = df[df['kfold'].isnull()].reset_index(drop=True)\n",
+    "X = df_train[FEATURES].values\n",
+    "y = df_train[TARGET].values\n",
+    "\n",
     "skf = StratifiedKFold(n_splits=5, random_state=42)\n",
     "for fold, (train, valid) in enumerate(skf.split(X, y)):\n",
-    "    df.loc[valid, 'kfold'] = fold\n",
+    "    df_train.loc[valid, 'kfold'] = fold\n",
     "\n",
-    "print(df['kfold'].value_counts(dropna=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df.head())"
+    "df = pd.concat([df_train, df_valid])\n",
+    "df.reset_index(drop=True, inplace=True)\n",
+    "print('Number of samples per class:')\n",
+    "print(df['kfold'].value_counts(dropna=False))\n",
+    "print('\\nClass \"-1\" is for validation')"
    ]
   },
   {
