--- a/src/algorithm_03.ipynb
+++ b/src/algorithm_03.ipynb
@@ -76,7 +76,7 @@
     "MODELS_DIR = config['MODELS_DIR']\n",
     "SUBMISSIONS_DIR = config['SUBMISSIONS_DIR']\n",
     "os.makedirs(join(MODELS_DIR, exp_name), exist_ok=True)\n",
-    "# os.mknod(join(MODELS_DIR, f'{exp_name}.txt'))\n",
+    "os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
     "\n",
     "BS = config['batch_size']\n",
     "LR = config['learning_rate']\n",
