--- a/src/algorithm_03.ipynb
+++ b/src/algorithm_03.ipynb
@@ -123,7 +123,7 @@
     "    model = timm.create_model(model_name, pretrained=True, num_classes=1)\n",
     "    model.cuda()\n",
     "    \n",
-    "    optim = AdamW(model.parameters(), lr=LR, weight_decay=0.001, amsgrad=True)\n",
+    "    optim = AdamW(model.parameters(), lr=LR, amsgrad=True)\n",
     "    scheduler = StepLR(optim, step_size=STEP_SIZE, gamma=0.3)\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "\n",
@@ -170,7 +170,7 @@
     "            val_auc, \n",
     "            str(datetime.timedelta(seconds=time.time() - start_time))[:7]))\n",
     "            \n",
-    "            scheduler.step(val_auc)\n",
+    "            scheduler.step()\n",
     "            # During the first iteration (first epoch) best validation is set to None\n",
     "            if not best_val:\n",
     "                best_val = val_auc\n",
