Commit before last main experiment (4)

--- a/src/algorithm_03.ipynb
+++ b/src/algorithm_03.ipynb
@@ -29,11 +29,11 @@
     "import torch.nn.functional as F\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.optim import AdamW\n",
-    "from torch.optim.lr_scheduler import StepLR\n",
+    "from torch.optim.lr_scheduler import ReduceLROnPlateau, StepLR\n",
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "from dataset import MelanomaDataset, train_transforms, test_transforms\n",
+    "from dataset import MelanomaDataset, train_transforms, test_transforms, tta_transforms\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -76,13 +76,16 @@
     "MODELS_DIR = config['MODELS_DIR']\n",
     "SUBMISSIONS_DIR = config['SUBMISSIONS_DIR']\n",
     "os.makedirs(join(MODELS_DIR, exp_name), exist_ok=True)\n",
-    "os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
+    "try: os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
+    "except: pass\n",
     "\n",
     "BS = config['batch_size']\n",
     "LR = config['learning_rate']\n",
     "EPOCHS = config['n_epochs']\n",
     "WORKERS = config['n_workers']\n",
     "ES_PATIENCE = config['early_stopping_patience']\n",
+    "# REDUCELR_PATIENCE = config['reduce_lr_on_plateau_patience']\n",
+    "# REDUCELR_FACTOR = config['reduce_lr_on_plateau_factor']\n",
     "STEP_SIZE = config['steplr_step_size']\n",
     "\n",
     "N_FOLDS = config['n_folds']\n",
@@ -124,7 +127,8 @@
     "    model.cuda()\n",
     "    \n",
     "    optim = AdamW(model.parameters(), lr=LR, amsgrad=True)\n",
-    "    scheduler = StepLR(optim, step_size=STEP_SIZE, gamma=0.3)\n",
+    "    # scheduler = StepLR(optim, step_size=STEP_SIZE, gamma=0.3)\n",
+    "    scheduler = ReduceLROnPlateau(optim, mode='max', patience=REDUCELR_PATIENCE, verbose=True, factor=REDUCELR_FACTOR)\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "\n",
     "    train_df = df_train[df_train['kfold'].isin(folds_to_train)].reset_index(drop=True)\n",
@@ -170,7 +174,7 @@
     "            val_auc, \n",
     "            str(datetime.timedelta(seconds=time.time() - start_time))[:7]))\n",
     "            \n",
-    "            scheduler.step()\n",
+    "            scheduler.step(val_auc)\n",
     "            # During the first iteration (first epoch) best validation is set to None\n",
     "            if not best_val:\n",
     "                best_val = val_auc\n",
@@ -190,8 +194,8 @@
     "    test_loader = DataLoader(test, batch_size=BS, shuffle=False, num_workers=WORKERS)\n",
     "    model = torch.load(model_path)\n",
     "    model.eval()\n",
-    "    tta_model = tta.ClassificationTTAWrapper(model, tta.aliases.d4_transform())\n",
-    "    with torch.no_grad():        \n",
+    "    tta_model = tta.ClassificationTTAWrapper(model, tta_transforms)\n",
+    "    with torch.no_grad():\n",
     "        for i, (x_test, _) in enumerate(tqdm(test_loader, total=len(test_loader), position=0, leave=True)):\n",
     "            x_test = torch.tensor(x_test, device=device, dtype=torch.float32)\n",
     "            z_test = tta_model(x_test)\n",
@@ -219,6 +223,42 @@
     "gc.collect()\n",
     "print('Submission is created...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Getting result on hold-outed set...')\n",
+    "\n",
+    "df = pd.read_csv(join(INPUT_DIR, f'{config[\"folds_train_file\"]}.csv'))\n",
+    "df_hold_out = df[df['kfold'] == -1].reset_index(drop=True)\n",
+    "hold_out = MelanomaDataset(df_hold_out, INPUT_DIR, images_size, test_transforms)\n",
+    "\n",
+    "preds = torch.zeros((len(hold_out), 1), dtype=torch.float32, device=device)\n",
+    "\n",
+    "folds = list(range(N_FOLDS))\n",
+    "for fold in folds:\n",
+    "    print(f'{fold} fold model:')\n",
+    "    hold_out_loader = DataLoader(hold_out, batch_size=BS, shuffle=False, num_workers=WORKERS)\n",
+    "\n",
+    "    model_path = join(MODELS_DIR, exp_name, f'fold_{fold}_weight.pth')\n",
+    "    model = torch.load(model_path)\n",
+    "    model.eval()\n",
+    "    tta_model = tta.ClassificationTTAWrapper(model, tta_transforms)\n",
+    "    with torch.no_grad():\n",
+    "        for i, (x_test, _) in enumerate(tqdm(hold_out_loader, total=len(hold_out_loader), position=0, leave=True)):\n",
+    "            x_test = torch.tensor(x_test, device=device, dtype=torch.float32)\n",
+    "            z_test = tta_model(x_test)\n",
+    "            z_test = torch.sigmoid(z_test)\n",
+    "            preds[i*x_test.shape[0]:i*x_test.shape[0] + x_test.shape[0]] += z_test\n",
+    "preds /= len(folds)\n",
+    "preds = preds.cpu().detach().numpy()\n",
+    "\n",
+    "hold_out_auc = roc_auc_score(df_hold_out['target'].values, preds)\n",
+    "print(f'\\nROC AUC on hold-outed set: {hold_out_auc:.4f}')"
+   ]
   }
  ],
  "metadata": {
@@ -237,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
