--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,137 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "%matplotlib inline"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "(33126, 8)\n"
-     ]
+     "name": "stdout",
+     "text": "(33126, 8)\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_name</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age_approx</th>\n",
-       "      <th>anatom_site_general_challenge</th>\n",
-       "      <th>diagnosis</th>\n",
-       "      <th>benign_malignant</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ISIC_2637011</td>\n",
-       "      <td>IP_7279968</td>\n",
-       "      <td>male</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>head/neck</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>benign</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ISIC_0015719</td>\n",
-       "      <td>IP_3075186</td>\n",
-       "      <td>female</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>upper extremity</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>benign</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ISIC_0052212</td>\n",
-       "      <td>IP_2842074</td>\n",
-       "      <td>female</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>lower extremity</td>\n",
-       "      <td>nevus</td>\n",
-       "      <td>benign</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ISIC_0068279</td>\n",
-       "      <td>IP_6890425</td>\n",
-       "      <td>female</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>head/neck</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>benign</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ISIC_0074268</td>\n",
-       "      <td>IP_8723313</td>\n",
-       "      <td>female</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>upper extremity</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>benign</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge  \\\n",
-       "0  ISIC_2637011  IP_7279968    male        45.0                     head/neck   \n",
-       "1  ISIC_0015719  IP_3075186  female        45.0               upper extremity   \n",
-       "2  ISIC_0052212  IP_2842074  female        50.0               lower extremity   \n",
-       "3  ISIC_0068279  IP_6890425  female        45.0                     head/neck   \n",
-       "4  ISIC_0074268  IP_8723313  female        55.0               upper extremity   \n",
-       "\n",
-       "  diagnosis benign_malignant  target  \n",
-       "0   unknown           benign       0  \n",
-       "1   unknown           benign       0  \n",
-       "2     nevus           benign       0  \n",
-       "3   unknown           benign       0  \n",
-       "4   unknown           benign       0  "
-      ]
+      "text/plain": "     image_name  patient_id     sex  age_approx anatom_site_general_challenge  \\\n0  ISIC_2637011  IP_7279968    male        45.0                     head/neck   \n1  ISIC_0015719  IP_3075186  female        45.0               upper extremity   \n2  ISIC_0052212  IP_2842074  female        50.0               lower extremity   \n3  ISIC_0068279  IP_6890425  female        45.0                     head/neck   \n4  ISIC_0074268  IP_8723313  female        55.0               upper extremity   \n\n  diagnosis benign_malignant  target  \n0   unknown           benign       0  \n1   unknown           benign       0  \n2     nevus           benign       0  \n3   unknown           benign       0  \n4   unknown           benign       0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_name</th>\n      <th>patient_id</th>\n      <th>sex</th>\n      <th>age_approx</th>\n      <th>anatom_site_general_challenge</th>\n      <th>diagnosis</th>\n      <th>benign_malignant</th>\n      <th>target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ISIC_2637011</td>\n      <td>IP_7279968</td>\n      <td>male</td>\n      <td>45.0</td>\n      <td>head/neck</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ISIC_0015719</td>\n      <td>IP_3075186</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>upper extremity</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ISIC_0052212</td>\n      <td>IP_2842074</td>\n      <td>female</td>\n      <td>50.0</td>\n      <td>lower extremity</td>\n      <td>nevus</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ISIC_0068279</td>\n      <td>IP_6890425</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>head/neck</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ISIC_0074268</td>\n      <td>IP_8723313</td>\n      <td>female</td>\n      <td>55.0</td>\n      <td>upper extremity</td>\n      <td>unknown</td>\n      <td>benign</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 28
     }
    ],
    "source": [
@@ -143,29 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "IP_4382720    115\n",
-       "IP_4938382    115\n",
-       "IP_7279968    115\n",
-       "IP_4479736    115\n",
-       "IP_0656529    114\n",
-       "             ... \n",
-       "IP_6661651      3\n",
-       "IP_8252567      3\n",
-       "IP_0725027      3\n",
-       "IP_6678597      3\n",
-       "IP_8335299      2\n",
-       "Name: patient_id, Length: 2056, dtype: int64"
-      ]
+      "text/plain": "IP_4382720    115\nIP_7279968    115\nIP_4479736    115\nIP_4938382    115\nIP_0656529    114\n             ... \nIP_2516168      3\nIP_7471612      3\nIP_9460738      3\nIP_0147446      3\nIP_8335299      2\nName: patient_id, Length: 2056, dtype: int64"
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 29
     }
    ],
    "source": [
@@ -174,124 +55,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "benign_malignant  target\n",
-       "benign            0         32542\n",
-       "malignant         1           584\n",
-       "Name: target, dtype: int64"
-      ]
+      "text/plain": "0    98.237034\n1     1.762966\nName: target, dtype: float64"
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 30
     }
    ],
    "source": [
-    "train.groupby('benign_malignant')['target'].value_counts()"
+    "train['target'].value_counts(normalize=True) * 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "(10982, 5)\n"
-     ]
+     "name": "stdout",
+     "text": "(10982, 5)\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_name</th>\n",
-       "      <th>patient_id</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age_approx</th>\n",
-       "      <th>anatom_site_general_challenge</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>ISIC_0052060</td>\n",
-       "      <td>IP_3579794</td>\n",
-       "      <td>male</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>ISIC_0052349</td>\n",
-       "      <td>IP_7782715</td>\n",
-       "      <td>male</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>lower extremity</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>ISIC_0058510</td>\n",
-       "      <td>IP_7960270</td>\n",
-       "      <td>female</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>torso</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>ISIC_0073313</td>\n",
-       "      <td>IP_6375035</td>\n",
-       "      <td>female</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>torso</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>ISIC_0073502</td>\n",
-       "      <td>IP_0589375</td>\n",
-       "      <td>female</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>lower extremity</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     image_name  patient_id     sex  age_approx anatom_site_general_challenge\n",
-       "0  ISIC_0052060  IP_3579794    male        70.0                           NaN\n",
-       "1  ISIC_0052349  IP_7782715    male        40.0               lower extremity\n",
-       "2  ISIC_0058510  IP_7960270  female        55.0                         torso\n",
-       "3  ISIC_0073313  IP_6375035  female        50.0                         torso\n",
-       "4  ISIC_0073502  IP_0589375  female        45.0               lower extremity"
-      ]
+      "text/plain": "     image_name  patient_id     sex  age_approx anatom_site_general_challenge\n0  ISIC_0052060  IP_3579794    male        70.0                           NaN\n1  ISIC_0052349  IP_7782715    male        40.0               lower extremity\n2  ISIC_0058510  IP_7960270  female        55.0                         torso\n3  ISIC_0073313  IP_6375035  female        50.0                         torso\n4  ISIC_0073502  IP_0589375  female        45.0               lower extremity",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>image_name</th>\n      <th>patient_id</th>\n      <th>sex</th>\n      <th>age_approx</th>\n      <th>anatom_site_general_challenge</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ISIC_0052060</td>\n      <td>IP_3579794</td>\n      <td>male</td>\n      <td>70.0</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ISIC_0052349</td>\n      <td>IP_7782715</td>\n      <td>male</td>\n      <td>40.0</td>\n      <td>lower extremity</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ISIC_0058510</td>\n      <td>IP_7960270</td>\n      <td>female</td>\n      <td>55.0</td>\n      <td>torso</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ISIC_0073313</td>\n      <td>IP_6375035</td>\n      <td>female</td>\n      <td>50.0</td>\n      <td>torso</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ISIC_0073502</td>\n      <td>IP_0589375</td>\n      <td>female</td>\n      <td>45.0</td>\n      <td>lower extremity</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 31
     }
    ],
    "source": [
@@ -302,10 +99,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(33126, 9)\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "kfold  target\n-1.0   0         98.219674\n       1          1.780326\n 0.0   0         98.239141\n       1          1.760859\n 1.0   0         98.239141\n       1          1.760859\n 2.0   0         98.238846\n       1          1.761154\n 3.0   0         98.238846\n       1          1.761154\n 4.0   0         98.238846\n       1          1.761154\nName: target, dtype: float64"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "train_folds = pd.read_csv('../input/train_folds_stratified.csv')\n",
+    "print(train_folds.shape)\n",
+    "train_folds.groupby('kfold')['target'].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(33126, 9)\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "kfold  target\n-1.0   0         98.249849\n       1          1.750151\n 0.0   0         98.423612\n       1          1.576388\n 1.0   0         98.473923\n       1          1.526077\n 2.0   0         98.054344\n       1          1.945656\n 3.0   0         97.903388\n       1          2.096612\n 4.0   0         98.322710\n       1          1.677290\nName: target, dtype: float64"
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "train_folds = pd.read_csv('../input/train_folds_groups.csv')\n",
+    "print(train_folds.shape)\n",
+    "train_folds.groupby('kfold')['target'].value_counts(normalize=True) * 100"
+   ]
   }
  ],
  "metadata": {
@@ -324,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
