Added TTA, metric on hold-out set and made a lot of fixes

--- a/src/algorithm_03.ipynb
+++ b/src/algorithm_03.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "from os.path import join\n",
-    "import numpy as np \n",
+    "import numpy as np ы\n",
     "import pandas as pd \n",
     "import gc\n",
     "from tqdm import tqdm\n",
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = 'exp_train_03'\n",
+    "exp_name = 'exp_train_05'\n",
     "with open(join('../configs/', f'{exp_name}.yaml'), 'r') as stream:\n",
     "    try:\n",
     "        config = yaml.safe_load(stream)\n",
@@ -79,14 +79,14 @@
     "try: os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
     "except: pass\n",
     "\n",
-    "BS = config['batch_size']\n",
+    "BS = config['\\ufeffbatch_size']\n",
     "LR = config['learning_rate']\n",
     "EPOCHS = config['n_epochs']\n",
     "WORKERS = config['n_workers']\n",
     "ES_PATIENCE = config['early_stopping_patience']\n",
-    "# REDUCELR_PATIENCE = config['reduce_lr_on_plateau_patience']\n",
-    "# REDUCELR_FACTOR = config['reduce_lr_on_plateau_factor']\n",
-    "STEP_SIZE = config['steplr_step_size']\n",
+    "REDUCELR_PATIENCE = config['reduce_lr_on_plateau_patience']\n",
+    "REDUCELR_FACTOR = config['reduce_lr_on_plateau_factor']\n",
+    "# STEP_SIZE = config['steplr_step_size']\n",
     "\n",
     "N_FOLDS = config['n_folds']\n",
     "images_size = config['images_size']\n",
