--- a/src/algorithm_03.ipynb
+++ b/src/algorithm_03.ipynb
@@ -10,7 +10,7 @@
    "outputs": [],
    "source": [
     "from os.path import join\n",
-    "import numpy as np ы\n",
+    "import numpy as np\n",
     "import pandas as pd \n",
     "import gc\n",
     "from tqdm import tqdm\n",
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
